[package]
name = "skribo"
version = "0.1.0"
authors = ["Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "text", "formatting", "layout"]
repository = "https://github.com/linebender/skribo"
description = "A Rust library for low-level text layout."
readme = "README.md"
categories = ["graphics", "text-processing"]

[features]
default = []
harfbuzz = ["dep:harfbuzz", "dep:harfbuzz-sys"]
rustybuzz = ["dep:rustybuzz"]

[dependencies]

#harfbuzz = "0.4.0"
#harfbuzz-sys = "0.5.0"

# optional harfbuzz support:
harfbuzz = { version = "0.4.0", optional = true }
harfbuzz-sys = { version = "0.5.0", optional = true }

# optional rustybuzz support:
rustybuzz = { version = "0.18.0", optional = true }

font-kit = {path = "../font-kit"} #, features = ["loader-freetype-default"] }
pathfinder_geometry = "0.5.1"
unicode-normalization = "0.1.13"
log = "0.4.11"
